overflow-with-bugs

--- a/local_test/src/app/parf_output/parf_output.module.css
+++ b/local_test/src/app/parf_output/parf_output.module.css
@@ -60,8 +60,13 @@
   margin-bottom: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: 220px;
-  overflow: hidden;
+  overflow-y: auto;
   position: relative;
+}
+
+.chartContainer {
+  position: relative;
+  pointer-events: auto; /* 确保鼠标事件能够触发 */
 }
 
 .displayMonitor strong {
